--- a/aspnet_tutorial/Views/Inc/nav.cshtml
+++ b/aspnet_tutorial/Views/Inc/nav.cshtml
@@ -12,7 +12,7 @@
 					<li class="dropdown pull-right">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg><span class="caret"></span></a>
 						<ul class="dropdown-menu" role="menu">
-							<li><a href="@Url.Action("Index","Profiles")"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> 
+							<li><a href="@Url.Action("Index","Profiles")"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile
 							</a></li>
 							<li><a href="@Url.Action("Index","Users")"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
 						</ul>
