Added CRUD views

--- a/aspnet_tutorial/Views/Categories/Delete.cshtml
+++ b/aspnet_tutorial/Views/Categories/Delete.cshtml
@@ -9,11 +9,11 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>category</h4>
+    <h4>Category</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.cat_name)
+            <label> Category name :</label>
         </dt>
 
         <dd>
@@ -26,7 +26,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
