--- a/aspnet_tutorial/Views/Categories/Index.cshtml
+++ b/aspnet_tutorial/Views/Categories/Index.cshtml
@@ -5,30 +5,40 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Index</h2>
-
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
+<div class="col-lg-12">
+<div class="panel panel-default">
+<div class="panel-heading">Products categories</div>
+<div class="panel-body">
+<a href="@Url.Action("Create","Categories")" 
+   class="btn btn-primary">New</a>
+<table data-toggle="table" data-url=""  data-show-refresh="true" data-show-toggle="true" 
+       data-show-columns="true" data-search="true" data-select-item-name="toolbar1" data-pagination="true" 
+       data-sort-name="name" data-sort-order="desc">
+    <thead>
     <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.cat_name)
-        </th>
-        <th></th>
+        <th data-sortable="true">Profil id</th>
+        <th data-sortable="true">Profile name</th>
+        <th data-sortable="true">Option</th>
+						        
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.cat_name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.cat_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.cat_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.cat_id })
-        </td>
-    </tr>
-}
-
-</table>
+    </thead>
+    <tbody>
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>@Html.DisplayFor(modelIem => item.cat_id)</td>
+            <td>
+                @Html.DisplayFor(modelItem => item.cat_name)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new {id = item.cat_id}) |
+                @Html.ActionLink("Details", "Details", new {id = item.cat_id}) |
+                @Html.ActionLink("Delete", "Delete", new {id = item.cat_id})
+            </td>
+        </tr>
+    }
+    </tbody>
+    </table>
+          </div>
+      </div>
+  </div>
