--- a/aspnet_tutorial/Views/Categories/Create.cshtml
+++ b/aspnet_tutorial/Views/Categories/Create.cshtml
@@ -5,33 +5,32 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Create</h2>
-
-
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">Categories</div>
+            <div class="panel-body">
+                <div class="col-md-6">
+                @using (Html.BeginForm()) 
+                {
+                    @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>category</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.cat_name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.cat_name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cat_name, "", new { @class = "text-danger" })
+                    <div class="form-horizontal">
+                        <h4>Add a new category</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                        <label>Category name</label>
+                                @Html.EditorFor(model => model.cat_name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.cat_name, "", new { @class = "text-danger" })
+                        </div>
+                        <button type="submit" class="btn btn-primary">Create</button>
+                        <button type="submit" class="btn btn-default">Reset</button>
+                    </div>
+                }
+                </div>
+              </div>
             </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
-}
-
+          </div><!-- /.col-->
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
