--- a/aspnet_tutorial/Views/Categories/Edit.cshtml
+++ b/aspnet_tutorial/Views/Categories/Edit.cshtml
@@ -5,39 +5,32 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Edit</h2>
-
+<div class="col-lg-12">
+<div class="panel panel-default">
+<div class="panel-heading">Category</div>
+<div class="panel-body">
+<div class="col-md-6">
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>category</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.cat_id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.cat_name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.cat_name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.cat_name, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div class="form-group">
+        <label> Category name :</label>
+        @Html.EditorFor(model => model.cat_name, new {htmlAttributes = new {@class = "form-control"}})
+        @Html.ValidationMessageFor(model => model.cat_name, "", new {@class = "text-danger"})
+    </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+    <button type="submit" id="submit" class="btn btn-primary">Save</button>
+    <button type="reset" name="reset" onclick="closed()" class="btn btn-default">Reset</button>
+}
             </div>
         </div>
     </div>
-}
-
+</div><!-- /.col-->
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
