--- a/aspnet_tutorial/Views/Customers/Create.cshtml
+++ b/aspnet_tutorial/Views/Customers/Create.cshtml
@@ -5,53 +5,46 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Create</h2>
-
+<div class="col-lg-12">
+<div class="panel panel-default">
+<div class="panel-heading">Customers</div>
+<div class="panel-body">
+<div class="col-md-6">
 
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>customer</h4>
+        <h4>Add a new customer</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
-            @Html.LabelFor(model => model.name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <label> Name :</label>
                 @Html.EditorFor(model => model.name, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.name, "", new { @class = "text-danger" })
-            </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.tel, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
+            <label>Tel :</label>
                 @Html.EditorFor(model => model.tel, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.tel, "", new { @class = "text-danger" })
-            </div>
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.address, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.address, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.address, "", new { @class = "text-danger" })
-            </div>
+            <label>Address :</label>
+            @Html.EditorFor(model => model.address, new {htmlAttributes = new {@class = "form-control"}})
+            @Html.ValidationMessageFor(model => model.address, "", new {@class = "text-danger"})
         </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+        <button type="submit" class="btn btn-primary">Create</button>
+        <button type="submit" class="btn btn-default">Reset</button>
+    </div>
+}
             </div>
         </div>
     </div>
-}
-
+</div><!-- /.col-->
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
