--- a/aspnet_tutorial/Views/Customers/Details.cshtml
+++ b/aspnet_tutorial/Views/Customers/Details.cshtml
@@ -5,37 +5,40 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>customer</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
-
-        <dd>
+<div class="col-lg-12">
+<div class="panel panel-default">
+<div class="panel-heading">Details</div>
+<div class="panel-body">
+<table>
+    <tbody>
+    <tr>
+        <td>
+            Name :
+        </td>
+        <td>
             @Html.DisplayFor(model => model.name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.tel)
-        </dt>
-
-        <dd>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Tel :
+        </td>
+        <td>
             @Html.DisplayFor(model => model.tel)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.address)
-        </dt>
-
-        <dd>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Address :
+        </td>
+        <td>
             @Html.DisplayFor(model => model.address)
-        </dd>
-
-    </dl>
+        </td>
+    </tr>
+    </tbody>
+</table>
+        </div>
+    </div>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.customer_id }) |
