--- a/aspnet_tutorial/Views/Orders/Delete.cshtml
+++ b/aspnet_tutorial/Views/Orders/Delete.cshtml
@@ -13,22 +13,6 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.qty)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.qty)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.total)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.total)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.customer.name)
         </dt>
 
@@ -43,14 +27,28 @@
         <dd>
             @Html.DisplayFor(model => model.product.product_name)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.qty)
+        </dt>
 
+        <dd>
+            @Html.DisplayFor(model => model.qty)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.total)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.total)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Delete" class="btn btn-danger" /> |
             @Html.ActionLink("Back to List", "Index")
         </div>
     }
