--- a/aspnet_tutorial/Views/Orders/Details.cshtml
+++ b/aspnet_tutorial/Views/Orders/Details.cshtml
@@ -5,45 +5,48 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>order</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.qty)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.qty)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.total)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.total)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.customer.name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.customer.name)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.product.product_name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.product.product_name)
-        </dd>
-
-    </dl>
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">Details</div>
+        <div class="panel-body">
+            <table>
+                <tbody>
+                <tr>
+                    <td>
+                        Customer Name :
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => model.customer.name)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Product Name :
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => model.product.product_name)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Qty :
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => model.qty)
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        Total :
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => model.total)
+                    </td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.order_id }) |
