--- a/aspnet_tutorial/Views/Orders/Edit.cshtml
+++ b/aspnet_tutorial/Views/Orders/Edit.cshtml
@@ -5,63 +5,57 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Edit</h2>
+<div class="col-lg-12">
+<div class="panel panel-default">
+<div class="panel-heading">Edit order</div>
+<div class="panel-body">
+<div class="col-md-6">
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>order</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.order_id)
+            <div class="form-horizontal">
+                <h4>order</h4>
+                <hr />
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.order_id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.fk_customer_id, "fk_customer_id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("fk_customer_id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.fk_customer_id, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    <label> Customer name :</label>
+                    @Html.DropDownList("fk_customer_id", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.fk_customer_id, "", new {@class = "text-danger"})
+                </div>
+
+                <div class="form-group">
+                    <label>Product name :</label>
+                    @Html.DropDownList("fk_product_id", null, htmlAttributes: new {@class = "form-control"})
+                    @Html.ValidationMessageFor(model => model.fk_product_id, "", new {@class = "text-danger"})
+                </div>
+
+                <div class="form-group">
+                    <label>Qty :</label>
+                    @Html.EditorFor(model => model.qty, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.qty, "", new {@class = "text-danger"})
+                </div>
+
+                <div class="form-group">
+                    <label>Total</label>
+                    @Html.EditorFor(model => model.total, new {htmlAttributes = new {@class = "form-control"}})
+                    @Html.ValidationMessageFor(model => model.total, "", new {@class = "text-danger"})
+                </div>
+
+                <button type="submit" id="submit" class="btn btn-primary">Save</button>
+                <button type="reset" name="reset" class="btn btn-default">Reset</button>
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.fk_product_id, "fk_product_id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("fk_product_id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.fk_product_id, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.qty, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.qty, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.qty, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.total, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.total, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.total, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+}
             </div>
         </div>
     </div>
-}
+</div><!-- /.col-->
 
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
