--- a/aspnet_tutorial/Views/Products/Index.cshtml
+++ b/aspnet_tutorial/Views/Products/Index.cshtml
@@ -4,43 +4,52 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">Products</div>
+        <div class="panel-body">
+            <a href="@Url.Action("Create","Products")"
+               class="btn btn-primary">New</a>
+            <table data-toggle="table" data-url="" data-show-refresh="true" data-show-toggle="true"
+                   data-show-columns="true" data-search="true" data-select-item-name="toolbar1" data-pagination="true"
+                   data-sort-name="name" data-sort-order="desc">
+                <thead>
+                    <tr>
+                        <th data-sortable="true">Product id</th>
+                        <th data-sortable="true">Category name</th>
+                        <th data-sortable="true">Product name</th>
+                        <th data-sortable="true">Unit price</th>
+                        <th data-sortable="true">Option</th>
 
-<h2>Index</h2>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItel =>item.product_id)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.category.cat_name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.product_name)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.unit_price)
+                            </td>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.product_name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.unit_price)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.category.cat_name)
-        </th>
-        <th></th>
-    </tr>
+                            <td>
+                                @Html.ActionLink("Edit", "Edit", new {id = item.product_id}) |
+                                @Html.ActionLink("Details", "Details", new {id = item.product_id}) |
+                                @Html.ActionLink("Delete", "Delete", new {id = item.product_id})
+                            </td>
+                        </tr>
+                    }
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.product_name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.unit_price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.category.cat_name)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.product_id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.product_id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.product_id })
-        </td>
-    </tr>
-}
-
-</table>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
