--- a/aspnet_tutorial/Views/Inc/head.cshtml
+++ b/aspnet_tutorial/Views/Inc/head.cshtml
@@ -1,7 +1,7 @@
 ﻿<head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Gestion shift | Econet-Leo</title>
+<title>ASP.NET | TUTORIAL</title>
 
 @Styles.Render("~/Assets/css")
 @Scripts.Render("~/Assets/js")
