--- a/aspnet_tutorial/Views/Products/Create.cshtml
+++ b/aspnet_tutorial/Views/Products/Create.cshtml
@@ -5,49 +5,48 @@
     Layout = "~/Views/Templates/Default/default_layout.cshtml";
 }
 
-<h2>Create</h2>
+<div class="col-lg-12">
+    <div class="panel panel-default">
+        <div class="panel-heading">Customers</div>
+        <div class="panel-body">
+            <div class="col-md-6">
 
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>product</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.fk_cat_id, "fk_cat_id", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("fk_cat_id", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.fk_cat_id, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                @using (Html.BeginForm())
+                {
+                    @Html.AntiForgeryToken()
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.product_name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.product_name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.product_name, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                    <div class="form-horizontal">
+                        <h4>product</h4>
+                        <hr />
+                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            <label>Category :</label>
+                            @Html.DropDownList("fk_cat_id", null, htmlAttributes: new {@class = "form-control"})
+                            @Html.ValidationMessageFor(model => model.fk_cat_id, "", new {@class = "text-danger"})
+                        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.unit_price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.unit_price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.unit_price, "", new { @class = "text-danger" })
-            </div>
-        </div>
+                        <div class="form-group">
+                            <label>Product name :</label>
+                            @Html.EditorFor(model => model.product_name, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.product_name, "", new {@class = "text-danger"})
+                        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                        <div class="form-group">
+                            <label>Unit price :</label>
+                            @Html.EditorFor(model => model.unit_price, new {htmlAttributes = new {@class = "form-control"}})
+                            @Html.ValidationMessageFor(model => model.unit_price, "", new {@class = "text-danger"})
+                        </div>
+                        <button type="submit" class="btn btn-primary">Save</button>
+                        <button type="reset" class="btn btn-default">Reset</button>
+                    </div>
+                }
+                
             </div>
         </div>
     </div>
-}
+</div><!-- /.col-->
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+            <div>
+                    @Html.ActionLink("Back to List", "Index")
+                </div>
