Changed Index to Login view

--- a/aspnet_tutorial/Views/Inc/nav.cshtml
+++ b/aspnet_tutorial/Views/Inc/nav.cshtml
@@ -14,7 +14,7 @@
 						<ul class="dropdown-menu" role="menu">
 							<li><a href="@Url.Action("Index","Profiles")"><svg class="glyph stroked male-user"><use xlink:href="#stroked-male-user"></use></svg> Profile
 							</a></li>
-							<li><a href="@Url.Action("Index","Users")"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
+							<li><a href="@Url.Action("Login","Users")"><svg class="glyph stroked cancel"><use xlink:href="#stroked-cancel"></use></svg> Logout</a></li>
 						</ul>
 					</li>
 				</ul>
