--- a/aspnet_tutorial/Views/Categories/Index.cshtml
+++ b/aspnet_tutorial/Views/Categories/Index.cshtml
@@ -16,8 +16,8 @@
        data-sort-name="name" data-sort-order="desc">
     <thead>
     <tr>
-        <th data-sortable="true">Profil id</th>
-        <th data-sortable="true">Profile name</th>
+        <th data-sortable="true">ID</th>
+        <th data-sortable="true">Category name</th>
         <th data-sortable="true">Option</th>
 						        
     </tr>
