Removed DisplayNameFor, added a label

--- a/aspnet_tutorial/Views/Profiles/Delete.cshtml
+++ b/aspnet_tutorial/Views/Profiles/Delete.cshtml
@@ -13,7 +13,7 @@
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.profile_name)
+            <label> Profile name</label>
         </dt>
 
         <dd>
