Changed product_id to id

--- a/aspnet_tutorial/Views/Products/Details.cshtml
+++ b/aspnet_tutorial/Views/Products/Details.cshtml
@@ -37,6 +37,6 @@
 </div>
     </div>
         <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.product_id }) |
+            @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
             @Html.ActionLink("Back to List", "Index")
         </p>
