--- a/aspnet_tutorial/Views/Customers/Delete.cshtml
+++ b/aspnet_tutorial/Views/Customers/Delete.cshtml
@@ -21,7 +21,15 @@
         </dd>
 
         <dt>
-           <label>Tel :</label>
+           <label>Email :</label>
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.email)
+        </dd>
+
+        <dt>
+            <label>Tel :</label>
         </dt>
 
         <dd>
