--- a/aspnet_tutorial/Views/Profiles/Details.cshtml
+++ b/aspnet_tutorial/Views/Profiles/Details.cshtml
@@ -25,6 +25,6 @@
     </div>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.profile_id }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
