--- a/aspnet_tutorial/Views/Profiles/Edit.cshtml
+++ b/aspnet_tutorial/Views/Profiles/Edit.cshtml
@@ -19,7 +19,7 @@
                         <h4>Update user profile</h4>
                         <hr />
                         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                        @Html.HiddenFor(model => model.profile_id)
+                        @Html.HiddenFor(model => model.id)
 
                         <div class="form-group">
                             <label>Profile name</label>
