Change cat_name to category_name

--- a/aspnet_tutorial/Views/Categories/Details.cshtml
+++ b/aspnet_tutorial/Views/Categories/Details.cshtml
@@ -16,7 +16,7 @@
             Category name :
         </td>
         <td>
-            @Html.DisplayFor(model => model.cat_name)
+            @Html.DisplayFor(model => model.category_name)
         </td>
     </tr>
     </tbody>
