Change cat_name to category_name

--- a/aspnet_tutorial/Views/Categories/Edit.cshtml
+++ b/aspnet_tutorial/Views/Categories/Edit.cshtml
@@ -20,7 +20,7 @@
 
                     <div class="form-group">
                         <label> Category name :</label>
-                        @Html.EditorFor(model => model.cat_name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.category_name, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.cat_name, "", new { @class = "text-danger" })
                     </div>
 
