Change cat_name to category_name

--- a/aspnet_tutorial/Views/Categories/Index.cshtml
+++ b/aspnet_tutorial/Views/Categories/Index.cshtml
@@ -28,7 +28,7 @@
         <tr>
             <td>@Html.DisplayFor(modelIem => item.id)</td>
             <td>
-                @Html.DisplayFor(modelItem => item.cat_name)
+                @Html.DisplayFor(modelItem => item.category_name)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new {id = item.id}) |
