Change cat_name to category_name

--- a/aspnet_tutorial/Views/Products/Details.cshtml
+++ b/aspnet_tutorial/Views/Products/Details.cshtml
@@ -15,7 +15,7 @@
             </dt>
 
             <dd>
-                @Html.DisplayFor(model => model.category.cat_name)
+                @Html.DisplayFor(model => model.category.category_name)
             </dd>
             <dt>
                Product name :
