Change cat_name to category_name

--- a/aspnet_tutorial/Views/Products/Index.cshtml
+++ b/aspnet_tutorial/Views/Products/Index.cshtml
@@ -31,7 +31,7 @@
                                 @Html.DisplayFor(modelItel =>item.id)
                             </td>
                             <td>
-                                @Html.DisplayFor(modelItem => item.category.cat_name)
+                                @Html.DisplayFor(modelItem => item.category.category_name)
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.product_name)
