Add bootstrap bundle

--- a/aspnet_tutorial/Views/Templates/Default/default_layout.cshtml
+++ b/aspnet_tutorial/Views/Templates/Default/default_layout.cshtml
@@ -16,6 +16,7 @@
     </div>	<!--/.main-->
     @Scripts.Render("~/Assets/js")
     @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required:false)
     <script>
         !function ($) {
